# feedcrosspost

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  main.py  requirements.txt
.github/workflows/: build_publish.yml
.kubernetes/: manifest.yaml
src/: main.rs
