[package]
name = "feedcrosspost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.45"
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.6", features = ["json", "rustls-tls"] }
chrono = "0.4.19"
roux = "1.3.7"
openssl = { version = "0.10", features = ["vendored"] }
